--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,5 +6,6 @@ html
     script(src="/javascripts/vendors/jquery.js")
     script(src="/javascripts/vendors/underscore.js")
     script(src="/javascripts/vendors/backbone.js")
+    script(src="/javascripts/vendors/socket.io.js")
   body
     block content
