wired up post functionality to post new terms

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,8 @@
 doctype html
 html
   head
-    title Search @ XO
+    title Insights
+    link(rel='stylesheet', href='/stylesheets/vendors/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
     script(src="/javascripts/vendors/jquery.js")
     script(src="/javascripts/vendors/underscore.js")
