--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,48 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+main.index {
+  margin-top: 20%;
+}
+
+main.new {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+main.new form {
+  margin: auto;
+}
+
+h1 {
+  text-align: center;
+  padding: 20px;
+  text-transform: lowercase;
 }
 
 a {
   color: #00B7FF;
+}
+
+#terms {
+  width: 200px;
+  margin: auto;
+  padding: 0;
+  list-style-type: none;
+}
+
+#terms .search-term {
+  margin: 35px;
+  text-align: center;
+  text-transform: lowercase;
+}
+
+form input {
+  width: 50%;
+  margin-right: 10px;
 }
