removed header view

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
     title Insights
     link(rel='stylesheet', href='/stylesheets/vendors/bootstrap.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/index.css')
+    link(rel='stylesheet', href='/stylesheets/new.css')
     script(src="/javascripts/vendors/jquery.js")
     script(src="/javascripts/vendors/underscore.js")
     script(src="/javascripts/vendors/backbone.js")
