--- a/views/new.jade
+++ b/views/new.jade
@@ -5,7 +5,7 @@ block content
     form.form-inline
       .form-group
         label.sr-only(for="search-input") Enter a search term
-        input#search-input.form-control(type="text")
+        input#search-input.form-control(type="text" autofocus)
       button.btn.btn-default.btn-primary.hidden-sm.hidden-xs(type="submit") Enter
   
   script(src="/javascripts/lib/views/form_view.js")  
