--- a/views/new.jade
+++ b/views/new.jade
@@ -6,7 +6,7 @@ block content
       .form-group
         label.sr-only(for="search-input") Enter a search term
         input#search-input.form-control(type="text" autofocus)
-      button.btn.btn-default.btn-primary.hidden-sm.hidden-xs(type="submit") Enter
+      button#search-submit-btn.btn.btn-default.btn-primary.hidden-sm.hidden-xs(type="submit") Enter
   
   script(src="/javascripts/lib/views/form_view.js")  
   script(src="/javascripts/lib/collections/term_collection.js")
